--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git is awesome</h1>    
+    <h1>Git is awesome</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Ipsam iste voluptas illo placeat adipisci, voluptatibus reiciendis consequuntur corrupti ex perspiciatis, unde eligendi dolorem laborum?
+        Quae distinctio voluptate repellat! Porro, officiis?
+    </p>    
 </body>
 </html>
