--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Git is awesome</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Ipsam iste voluptas illo placeat adipisci, voluptatibus reiciendis consequuntur corrupti ex perspiciatis, unde eligendi dolorem laborum?
-        Quae distinctio voluptate repellat! Porro, officiis?
+        Quae distinctio voluptate repellat! Porro, officiis?<span>Hi there</span>
     </p>    
 </body>
 </html>
