--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         Ipsam iste voluptas illo placeat adipisci, voluptatibus reiciendis consequuntur corrupti ex perspiciatis, unde eligendi dolorem laborum?
         Quae distinctio voluptate repellat! Porro, officiis?
     </p>    
-    <h1>Git is awesome</h1>    
+    <h1>Git is awesome</h1>
+    <h1>Git is awesome - Web Edition </h1>  
 </body>
 </html>
