add index2 = branch

--- a/index2.html
+++ b/index2.html
@@ -14,5 +14,6 @@
     </p>    
     <h1>Git is awesome</h1>
     <h1>Git is awesome - Web Edition </h1>  
+    <h1>Git is awesome - Add index2 </h1>  
 </body>
 </html>
